fix(cover): gap between title elements, removed comments

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,6 @@
   padding: 92px 51px;
   display: grid;
   grid-template-columns: repeat(4, 1fr) repeat(1, 2fr) repeat(4, 1fr);
-  /* place-content: space-evenly; */
   font-size: 18px;
 }
 
@@ -67,7 +66,6 @@
 }
 
 .cover {
-  /* z-index: -1; */
   position: relative;
   display: flex;
   flex-direction: column;
@@ -76,7 +74,6 @@
   height: 757px;
   color: #fff;
   /* https://developer.mozilla.org/en-US/docs/Web/CSS/background#syntax */
-  /* fixme cover or 100% */
   background: no-repeat center/cover url('../images/cover.jpg');
   line-height: 1.15;
 }
@@ -85,8 +82,6 @@
   z-index: 0;
   position: absolute;
   inset: 0;
-  /* width: 100%;
-  height: 100%; */
   content: '';
   background-color: rgba(0, 0, 0, 0.6);
 }
@@ -97,7 +92,7 @@
   padding: 8px 50px 0;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 18px;
   line-height: 1;
   font-size: 100px;
   font-weight: 700;
